# Time-Tracker-App

./: .gitignore  .replit  app.py  app.py.backup  blp-patch.py  delete.py  patch.py  pyproject.toml  replit.md  time-update  time_tracker_example.csv  time_tracker_example.xlsx
.streamlit/: config.toml  secrets.toml
attached_assets/: Pasted-Columns-Card-name-Card-link-Card-estimate-Card-estimate-s-Card-estimate-h-Card-e-1751440349192_1751440349193.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-engine-of-type--1751379723831_1751379723832.txt  content-1751440653798.md
